# anastasia_pleshkova_kr_3

./: README.md  main.py  pyproject.toml
tests/: test_functions.py
utils/: functions.py
