[tool.poetry]
name = "project"
version = "0.1.0"
description = "Код для виджета «Операции по счетам»"
authors = ["Anastasia Pleshkova <nastya.tsvetkova@ramler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
